--- a/.env
+++ b/.env
@@ -6,9 +6,14 @@
 
 DATABASE_URL="postgresql://postgres:qfVkbbYnJApDhSoc@db.kjstlekdqdfojxlppynh.supabase.co:5432/postgres"
 
+GITHUB_ID=3990bbdb229243aa4605
+GITHUB_SECRET=edd26d3f67589b2076fbe9c209c4a667cfe8b7de
 
-EMAIL_SERVER_USER=username
-EMAIL_SERVER_PASSWORD=password
-EMAIL_SERVER_HOST=smtp.example.com
-EMAIL_SERVER_PORT=587
-EMAIL_FROM=noreply@example.com
+GOOGLE_CLIENT_ID=161652650689-dv4e206ovqilid42qpabphfffiiphs39.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+
+EMAIL_SERVER_USER=resend
+EMAIL_SERVER_PASSWORD=re_38NUrXGA_LWH8uQkDKp2FLBxzArFoenKf
+EMAIL_SERVER_HOST=smtp.resend.com
+EMAIL_SERVER_PORT=465
+EMAIL_FROM=ola.pregowska975@gmail.com
