--- a/.env
+++ b/.env
@@ -16,4 +16,4 @@ EMAIL_SERVER_USER=resend
 EMAIL_SERVER_PASSWORD=re_38NUrXGA_LWH8uQkDKp2FLBxzArFoenKf
 EMAIL_SERVER_HOST=smtp.resend.com
 EMAIL_SERVER_PORT=465
-EMAIL_FROM=ola.pregowska975@gmail.com
+EMAIL_FROM=onboarding@resend.dev
